# Vdt-Webapp

./: .env-default  .gitattributes  .gitignore  Dockerfile  README copy.md  README.md  contributing.md  devcontainer.json  docker-compose copy.yml  docker-compose.yaml  docker-compose.yml  extensions.json  makefile  mkdocs.yml  package-lock.json  pyproject.toml  schema.yaml
api/: .gitignore  Dockerfile  README.md  makefile  mkdocs.yml  pyproject.toml  schema.yml
api/autogmo_api/: manage.py
api/autogmo_api/apps/accounts/: adapters.py  forms.py  models.py  urls.py  views.py
api/autogmo_api/apps/auth/: apps.py  urls.py  views.py
api/autogmo_api/apps/auth/tests/: views_test.py
api/autogmo_api/apps/user/: managers.py  models.py  tests.py
api/autogmo_api/apps/user/migrations/: 0001_initial.py
api/autogmo_api/autogmo_api/: asgi.py  urls.py  wsgi.py
api/autogmo_api/autogmo_api/settings/: base.py  development.py  production.py  test.py
api/autogmo_api/tests/: conftest.py
api/autogmo_api/tests/test_accounts/: managers_test.py
api/docs/: architecture.md  goals.md  index.md  setup.md
api/requirements/: dev.txt  main.txt  test.txt
api/scripts/postgres/: install.sh
api/src/verdantech_api/: app.py  dependencies.py  main.py  providers.py
api/src/verdantech_api/api/: app.py  exceptions.py  settings.py
api/src/verdantech_api/application/: __init__.py
api/src/verdantech_api/infrastructure/: __init__.py
api/src/verdantech_api/lib/: utils.py
api/src/verdantech_api/settings/: __init__.py  base.py
api/src/verdantech_api3/lib/: utils.py
api/tests/: conftest.py  utils.py
api/tests/integration/: conftest.py
api/tests/unit/: conftest.py
api/tests/unit/lib/: utils_test.py
api/tests/unit/validators/: conftest.py  test_generic_validations.py  test_generic_validators.py
api/verdantech_api/: manage.py  todo.md
api/verdantech_api/apps/accounts/: apps.py  forms.py  schema.py  serializers.py  urls.py  views.py
api/verdantech_api/tests/: conftest.py
api/verdantech_api/tests/accounts_test/: endpoints_test.py  managers_test.py  selectors_test.py
api/verdantech_api/tests/auth_test/: endpoints_test.py
api/verdantech_api/tests/gardens_test/: endpoints_test.py  factories.py  models_test.py  selectors_test.py  services_test.py
api/verdantech_api/tests/test_accounts/: endpoints_test.py  factories.py
api/verdantech_api/tests/test_auth/: endpoints_test.py
api/verdantech_api/tests/test_gardens/: conftest.py  endpoints_test.py  factories.py  models_test.py  selectors_test.py  services_test.py
api/verdantech_api/verdantech_api/: urls.py  wsgi.py
api/verdantech_api/verdantech_api/settings/: base.py  development.py  production.py  test.py
backend/: Dockerfile  README.md  makefile  mkdocs.yml  pyproject.toml
backend/docs/: changelog.md  environment_vars.md  index.md  makefile.md  settings.md  setup.md
backend/docs/codebase/: architecture.md
backend/docs/codebase/common/: entrypoints.md  ops.md
backend/docs/codebase/user/: domain.md  interfaces.md  ops.md
backend/mocks/domain/: common_mock.py
backend/mocks/infra/security/: mock_crypt.py
backend/requirements/: .pdm-lock  main.txt  test.txt
backend/schema/: openapi.yaml
backend/schema/specs/: cultivar.ts  garden.ts  user.ts  workspace.ts
backend/src/: dependencies.py
backend/src/api/litestar/: app.py  dependencies.py  exceptions.py  lifecycle.py  router.py  settings.py
backend/src/asgi/litestar/: exceptions.py
backend/src/attributes/domain/: __init__.py  models.py
backend/src/common/domain/: commands.py
backend/src/common/ops/: processors.py  queries.py
backend/src/cultivars/domain/: __init__.py  commands.py  enums.py  models.py  specs.py
backend/src/cultivars/ops/: commands.py  queries.py
backend/src/domain/: common.py
backend/src/domain/common/: values.py
backend/src/domain/garden/: entities.py
backend/src/domain/planner/: values.py
backend/src/domain/plants/: entities.py  values.py
backend/src/domain/user/: entities.py  exceptions.py  sanitizers.py  values.py
backend/src/environment/domain/: __init__.py
backend/src/garden/domain/: __init__.py  commands.py  enums.py  events.py  models.py  permission.py  specs.py
backend/src/garden/interfaces/: __init__.py  repository.py
backend/src/garden/ops/: commands.py  events.py  queries.py
backend/src/geometry/: __init__.py  interface.py  shapely.py
backend/src/geometry/domain/: __init__.py  commands.py  enums.py  models.py  specs.py
backend/src/geometry/ops/: queries.py
backend/src/infra/email/: __init__.py
backend/src/infrastructure/email/: generic.py  litestar_emitter.py
backend/src/interfaces/email/: client.py  emitter.py  exceptions.py
backend/src/interfaces/persistence/: generic.py
backend/src/plants/domain/: models.py
backend/src/settings/: __init__.py  base.py
backend/src/static/: banned_fields.txt  plant_names.txt
backend/src/static/emails/: email_verification.html  garden_invite.html
backend/src/user/domain/: events.py  models.py
backend/src/user/interfaces/: repository.py
backend/src/user/ops/: events.py  queries.py
backend/src/utils/: key_generator.py
backend/src/utils/sanitizers/: __init__.py  field.py  object.py  options.py  spec.py
backend/src/workspace/domain/: __init__.py  commands.py  models.py  specs.py
backend/src/workspace/ops/: queries.py
backend/tests/: conftest.py
backend/tests/domain/user/: conftest.py  entities_test.py  values_test.py
backend/tests/gardens/domain/: garden_test.py
backend/tests/infra/persistence/: utils.py
backend/tests/mocks/: registry.py
backend/tests/mocks/persistence/: base_repo_mock.py  garden_mock.py  user_mock.py
backend/tests/mocks/security/: crypt_mock.py
backend/tests/unit/: conftest.py
backend/tests/user/adapters/: conftest.py
backend/tests/user/domain/: confirmation_test.py
backend/tests/user/ops/: commands_test.py  queries_test.py
backend/tests/utils/sanitizers/: spec_test.py
backend/tests_old/integration/: sqlalchemy.py
backend/told/integration/: conftest.py
backend/told/unit/: conftest.py
(+1704 files in other folders)
