[project]
name = "verdantech_api"
version = "1.0.0"
description = 'API of the VerdanTech web application.'
authors = [
    { name = "Nathaniel King", email = "nathanielarking@gmail.com" }
]
dependencies = [
    "litestar[standard, jwt]==2.9.1",
    "taskiq",
    "taskiq-nats",
    "nats-py",
    "svcs",
    "litestar-svcs",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "passlib",
    "argon2_cffi",
    "aiosmtplib",
    "html2text",
    "aiofiles",
    "email-validator",
    "python-decouple",
    "shapely",
    "cattrs",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "factory_boy",
    "pytest-mock",
    "pytest-html",
    "coverage[toml]",
]
dev = [
    "pyright",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "black",
    "isort",
    "ruff",
    "validate-pyproject",
]

[project.urls]
"Repository" = "https://github.com/nathanielarking/VerdanTech"

[tool.black]
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
src_paths = ["src", "tests", "mocks"]
known_first_party = ["src"]
import_heading_stdlib="Standard Library"
import_heading_thirdparty="External Libraries"
import_heading_firstparty="VerdanTech Source"
skip_gitignore = true
skip_glob = ["**/migrations/*"]

[tool.pytest.ini_options]
addopts = "-vv -x -rx --lf"
pythonpath = ". src tests"
testpaths = ["tests/"]
python_files = ["tests.py", "test_*.py", "*_test.py", "*_tests.py", "**/tests/*", "**/test/*"]
markers = [
    "unit: Tests isolated from external services",
    "databases: Unit tests of interfaces to external services",
    "asgi: Integration tests of the application interface",
]
asyncio_mode="auto"