[project]
name = "verdantech_api"
version = "1.0.0"
requires-python = ">=3.10.6"
license = {text = "GPL-3.0-or-later"}
description = 'API of the VerdanTech web application.'
readme = "README.md"
authors = [
  { name = "Nathaniel King", email = "nathanielarking@gmail.com" }
]
dependencies = [
    "litestar[picologging, sqlalchemy, cli]",
    "aiosmtplib",
    "aiofiles",
    "email-validator",
    "python-usernames",
    "confusable_homoglyphs",
    "python-decouple",
]

[project.optional-dependencies]
test = [
    "pytest",
    "factory_boy",
    "pytest-mock",
    "pytest-html",
    "coverage[toml]",
]
dev = [
    "black",
    "isort",
    "ruff",
    "validate-pyproject",
]

[project.urls]
"Repository" = "https://github.com/nathanielarking/VerdanTech"

[tool.setuptools]
py-modules = ["verdantech_api"]

[tool.black]
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''


[tool.isort]
profile = "black"
combine_as_imports = true
src_paths = ["verdantech_api"]
known_first_party = ["verdantech_api"]
skip_gitignore = true
skip_glob = ["**/migrations/*"]

[tool.pytest.ini_options]
addopts = "-vv -x -rx"
pythonpath = ". tests"
testpaths = ["tests/"]
python_files = ["tests.py", "test_*.py", "*_test.py", "*_tests.py", "**/tests/*", "**/test/*"]
markers = [
    "unit: Isolated tests of individual functions",
    "endpoint: Integrated tests of one or multiple endpoints",
]
